Fix layout issue in MS Edge

--- a/src/style/flatpickr_base.styl
+++ b/src/style/flatpickr_base.styl
@@ -169,7 +169,7 @@
 .flatpickr-days
 	padding-top 1px
 	outline 0
-	overflow auto
+	overflow hidden
 
 	if $border-calendar-only is defined
 		border 1px solid $calendar_border_color
